feat: formulario plataforma completo

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -964,3 +964,11 @@ body {
     background-color: #fff;
   }
 }
+
+#formlink {
+  .current-row {
+    td {
+      background-color: #fff9c4;
+    }
+  }
+}
