--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -176,7 +176,7 @@ body {
 }
 
 .card-plataforma {
-  min-height: 300px;
+  height: 300px;
   position: relative;
   margin: 10px;
 }
@@ -253,10 +253,11 @@ body {
   margin-right: auto;
   margin-bottom: 13px;
   background-color: #2b2a2e;
-  font-size: 16px;
+  font-size: 15px;
 
   svg {
-    margin-top: 9px;
+    text-align: center;
+    margin-top: 10px;
   }
 }
 
@@ -300,7 +301,7 @@ body {
 
 .filtro {
   padding-bottom: 10px;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 /* ============================================================== */
@@ -436,6 +437,7 @@ body {
 .img-table {
   width: 50px; 
   height: 50px;
+  border-radius: 15px;
 }
 
 .tag-green {
@@ -486,11 +488,13 @@ body {
 .img-card {
   width: 90px; 
   height: 90px;
+  border-radius: 15px;
 }
 
 .text-card {
   padding: 14px;
   padding-bottom: 0px;
+  text-align: justify;
 }
 
 .card-btn {
@@ -498,8 +502,10 @@ body {
 }
 
 .title-card {
-  font-weight: 900;
+  font-weight: 600;
   font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: #002C53;
 }
 
 .tipo-card {
@@ -889,7 +895,7 @@ body {
 .login-label {
   line-height: 24px;
   padding-bottom: 10px;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .login-btn {
